--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,22 @@
-# ==========================================
-# 1. 애플리케이션 및 웹 설정
-# ==========================================
 spring.application.name=demo
-spring.web.resources.static-locations=classpath:/static/
-# PUT, DELETE 메서드 사용을 위한 필터 활성화 (필수)
+# 정적 리소스 경로는 기본값 사용 (설정 줄 삭제 또는 주석 처리)
+# spring.web.resources.static-locations=classpath:/static/ 
+
 spring.mvc.hiddenmethod.filter.enabled=true
-# HTML 수정 시 서버 재시작 없이 반영 (개발용)
 spring.thymeleaf.cache=false
 
-# ==========================================
-# 2. 데이터베이스 설정 (MySQL)
-# H2 설정은 지우고 MySQL만 남겼습니다.
-# ==========================================
+# MySQL 연결 설정
 spring.datasource.url=jdbc:mysql://localhost:3306/spring?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=123123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ==========================================
-# 3. JPA / Hibernate 설정
-# ==========================================
-# 콘솔에 실행되는 SQL 보여주기
+# JPA 설정
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+server.servlet.session.timeout=300s
+server.servlet.session.cookie.secure=true
+# 포트 번호를 8080으로 고정
+server.port=8080
 
-# [중요] 초기화 모드 설정
-# create-drop: 서버 실행 시 기존 테이블을 모두 삭제하고 새로 만듭니다. (데이터 초기화)
-# 꼬인 테이블 구조를 풀 때 유용합니다.
-spring.jpa.hibernate.ddl-auto=create-drop
