--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,10 @@ server.servlet.session.cookie.secure=true
 # 포트 번호를 8080으로 고정
 server.port=8080
 
+# 기존 설정 유지...
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=./demo/src/main/resources/static/upload/
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=30MB
+
